// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromoTextBanner native component ModuleN should render correctly 1`] = `
<Styled(View)>
  <Styled(Anchor)
    accessibilityLabel=""
    anchorVariation=""
    colorName={null}
    customStyle={Object {}}
    locator=""
    onPress={null}
    text=""
    url="http://example.com235"
    visible={false}
  >
    <style1
      key="0"
      text="alL DINOS"
    />
    <style2
      key="1"
      text="50% OFF"
    />
  </Styled(Anchor)>
</Styled(View)>
`;

exports[`PromoTextBanner native component renders all style correctly 1`] = `
<StyledNativeComponent
  accessibilityText=""
  color="text.primary"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs36"
  fontWeight="black"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  margin={null}
  numberOfLines={null}
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 2`] = `
<StyledNativeComponent
  accessibilityText=""
  color="text.primary"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs42"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="42px"
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 3`] = `
<StyledNativeComponent
  accessibilityText=""
  color="black"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs64"
  fontWeight="black"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="64px"
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 4`] = `
<StyledNativeComponent
  accessibilityText=""
  color="white"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs16"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 5`] = `
<StyledNativeComponent
  accessibilityText=""
  color="white"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs64"
  fontWeight="black"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="64px"
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 6`] = `
<Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="white"
    dataLocator=""
    fontFamily="primary"
    fontSize="fs64"
    fontWeight="black"
    lineHeight="64px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "height": 58,
        "marginTop": 8,
      }
    }
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="white"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs42"
      fontWeight="black"
      lineHeight="42px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "height": 33,
        }
      }
      textDecoration={null}
    />
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="white"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs20"
      fontWeight="black"
      lineHeight="20px"
      margin={null}
      numberOfLines={null}
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`PromoTextBanner native component renders all style correctly 7`] = `
<Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="primary"
    fontSize="fs64"
    fontWeight="black"
    lineHeight="64px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "height": 58,
        "marginTop": 8,
      }
    }
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs42"
      fontWeight="black"
      lineHeight="42px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "height": 33,
        }
      }
      textDecoration={null}
    />
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs20"
      fontWeight="black"
      lineHeight="20px"
      margin={null}
      numberOfLines={null}
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`PromoTextBanner native component renders all style correctly 8`] = `
<Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="primary"
    fontSize="fs64"
    fontWeight="black"
    lineHeight="64px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "height": 58,
        "marginTop": 8,
      }
    }
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs42"
      fontWeight="black"
      lineHeight="42px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "height": 33,
        }
      }
      textDecoration={null}
    />
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs20"
      fontWeight="black"
      lineHeight="20px"
      margin={null}
      numberOfLines={null}
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`PromoTextBanner native component renders all style correctly 9`] = `
<Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="pink.400"
    dataLocator=""
    fontFamily="primary"
    fontWeight="black"
    lineHeight="155px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "fontSize": 153,
        "height": 131,
        "marginTop": 8,
      }
    }
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="pink.400"
      dataLocator=""
      fontFamily="primary"
      fontWeight="black"
      lineHeight="99px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "fontSize": 99,
          "height": 85,
        }
      }
      textDecoration={null}
    />
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="pink.400"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs42"
      fontWeight="black"
      lineHeight="42px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "height": 42,
        }
      }
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`PromoTextBanner native component renders all style correctly 10`] = `
<Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="primary"
    fontWeight="black"
    lineHeight="34px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "fontSize": 28,
      }
    }
    text=""
    textAlign="center"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="primary"
    fontWeight="black"
    lineHeight="86px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "fontSize": 86,
      }
    }
    text=""
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="primary"
      fontWeight="black"
      lineHeight="50px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "fontSize": 48,
          "height": 45,
        }
      }
      text=""
      textDecoration={null}
    />
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs42"
      fontWeight="black"
      lineHeight="28px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "fontSize": 28,
        }
      }
      text=""
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`PromoTextBanner native component renders all style correctly 11`] = `
<Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="primary"
    fontWeight="black"
    lineHeight="34px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "fontSize": 28,
      }
    }
    text=""
    textAlign="center"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="primary"
    fontWeight="black"
    lineHeight="86px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "fontSize": 86,
      }
    }
    text=""
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="primary"
      fontWeight="black"
      lineHeight="50px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "fontSize": 48,
          "height": 45,
        }
      }
      text=""
      textDecoration={null}
    />
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs42"
      fontWeight="black"
      lineHeight="28px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "fontSize": 28,
        }
      }
      text=""
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`PromoTextBanner native component renders all style correctly 12`] = `
<StyledNativeComponent
  accessibilityText=""
  color="black"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs16"
  fontWeight="black"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="16px"
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 13`] = `
<StyledNativeComponent
  accessibilityText=""
  color="gray.900"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs16"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="16px"
  margin={null}
  numberOfLines={null}
  textAlign="left"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 14`] = `
<StyledNativeComponent
  accessibilityText=""
  color="white"
  dataLocator=""
  fontFamily="secondary"
  fontSize="fs14"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="14px"
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 15`] = `
<StyledNativeComponent
  accessibilityText=""
  color="white"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs16"
  fontWeight="regular"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 16`] = `
<StyledNativeComponent
  accessibilityText=""
  color="text.primary"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs20"
  fontWeight="black"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  letterSpacing="ls1"
  lineHeight="20px"
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 17`] = `
<StyledNativeComponent
  accessibilityText=""
  color="text.primary"
  dataLocator=""
  fontFamily="primary"
  fontSize="fs20"
  fontWeight="semibold"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  letterSpacing="ls2"
  lineHeight="20px"
  margin={null}
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 18`] = `
<StyledNativeComponent
  accessibilityText=""
  color="gray.900"
  dataLocator=""
  fontSize="fs32"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  letterSpacing="ls2"
  lineHeight="47px"
  margin={null}
  mobilefontFamily="primary"
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 19`] = `
<StyledNativeComponent
  accessibilityText=""
  color="gray.900"
  dataLocator=""
  fontSize="fs48"
  fontWeight="black"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="47px"
  margin={null}
  mobilefontFamily="primary"
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 20`] = `
<StyledNativeComponent
  accessibilityText=""
  color="gray.900"
  dataLocator=""
  fontSize="fs48"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="47px"
  margin={null}
  mobilefontFamily="primary"
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 21`] = `
<StyledNativeComponent
  accessibilityText=""
  color="gray.900"
  dataLocator=""
  fontSize="fs64"
  fontWeight="black"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  lineHeight="64px"
  margin={null}
  mobilefontFamily="primary"
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 22`] = `
<Styled(Styled(BodyCopy))
  accessibilityText=""
  color="gray.900"
  dataLocator=""
  fontSize="fs20"
  fontWeight="semibold"
  letterSpacing="ls2"
  lineHeight="20px"
  margin={null}
  mobilefontFamily="primary"
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 23`] = `
<Styled(Styled(BodyCopy))
  accessibilityText=""
  color="gray.900"
  dataLocator=""
  fontSize="fs20"
  fontWeight="semibold"
  letterSpacing="ls2"
  lineHeight="20px"
  margin={null}
  mobilefontFamily="primary"
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 24`] = `
<StyledNativeComponent
  accessibilityText=""
  color="gray.900"
  dataLocator=""
  fontSize="fs42"
  fontWeight="black"
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "_foldedDefaultProps": Object {
        "accessibilityText": "",
        "dataLocator": "",
        "margin": null,
        "numberOfLines": null,
        "textDecoration": null,
      },
      "attrs": Array [],
      "displayName": "Styled(Styled(BodyCopy))",
      "inlineStyle": InlineStyle {
        "rules": Array [
          "
    ",
          ";
  ",
          "
  ",
          [Function],
          "
  text-align: center;
",
        ],
      },
      "render": [Function],
      "styledComponentId": "StyledNativeComponent",
      "target": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  margin={null}
  mobilefontFamily="primary"
  numberOfLines={null}
  textAlign="center"
  textDecoration={null}
/>
`;

exports[`PromoTextBanner native component renders all style correctly 25`] = `
<Styled(View)
  style={
    Object {
      "marginTop": 5,
    }
  }
>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="text.primary"
    dataLocator=""
    fontFamily="primary"
    fontSize="fs48"
    fontWeight="black"
    lineHeight="48px"
    margin={null}
    numberOfLines={null}
    style={
      Object {
        "height": 38,
        "marginTop": 0,
      }
    }
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs28"
      fontWeight="black"
      lineHeight="28px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "height": 24,
          "marginTop": 0,
          "width": 28,
        }
      }
      textDecoration={null}
    />
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      color="text.primary"
      dataLocator=""
      fontFamily="primary"
      fontSize="fs18"
      fontWeight="black"
      lineHeight="18px"
      margin={null}
      numberOfLines={null}
      style={
        Object {
          "height": 20,
        }
      }
      textAlign="center"
      textDecoration={null}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`PromoTextBanner native component renders correctly 1`] = `
<Styled(View)>
  <Styled(Anchor)
    accessibilityLabel=""
    anchorVariation=""
    colorName={null}
    customStyle={Object {}}
    locator=""
    onPress={null}
    text=""
    url="http://example.com235"
    visible={false}
  >
    <style1
      dataLocator="moduleK_text_"
      key="0"
      text="alL DINOS"
    />
    <style2
      dataLocator="moduleK_text_"
      key="1"
      text="50% OFF"
    />
  </Styled(Anchor)>
</Styled(View)>
`;
